2018-01-01  Bruno Haible  <bruno@clisp.org>

	Bump copyright year.
	* COPYRIGHT: Bump year.
	* spvw.d (print_banner): Likewise.

2018-01-01  Bruno Haible  <bruno@clisp.org>

	Modernization: Use improvements from gnulib and libffcall.
	* m4/as-underscore.m4: Replace with version from GNU libffcall.
	* aclocal.m4, src/configure, src/config.h.in, gllib/*: Regenerated.

2017-12-31  Bruno Haible  <bruno@clisp.org>

	Update Spanish translation.
	* po/es.po: Update from Francisco Javier Serrador.
	* po/es.gmo, po/clisplow_es.*: Regenerated.

2017-12-29  Bruno Haible  <bruno@clisp.org>

	Don't create a circular tree when recovering from continuable error
	(bug from 2003-05-20).
	* control.d (make_variable_frame): Store the corrected symbol in the
	source program.

2017-12-20  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (make-arg-spec): Downcase keyword args to
	avoid having to write (pari:random_ :|n| 10).

2017-12-17  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (make-documentation): Set doc instead of
	expanding into a form that does it.
	(polsturm): Redefine with better keyword args, preserving the doc
	using make-documentation.

2017-12-15  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp: Convert to and from INFINITY (+oo and -oo)

2017-12-15  Sam Steingold  <sds@gnu.org>

	Most of the PARI interface functions are generated automatically.
	* modules/pari/desc2lisp.lisp: New file, read
	$datadir/pari/pari.desc and emi pari-call-out forms.
	* modules/pari/pari.lisp: Remove most of pari-call-out forms and
	use desc2lisp to interface to most of the GP functions.

2017-12-15  Bruno Haible  <bruno@clisp.org>

	Control configure failure.
	* configure: Use explicit failure test for the ${MAKE} commands.

2017-12-11  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regexp.lisp (regexp-split): Respect the :END argument.

2017-12-08  Sam Steingold  <sds@gnu.org>

	Ensure that all positional args are in *ARGS* when compiling.