@@ -1172,15 +1172,10 @@ else
 fi
 
 # Main cpu dependencies:
-cpu=$host_cpu_c_abi
+cpu="${host_cpu_c_abi}"
 if test -z "$cpu"; then
   echo "$0: WARNING: host_cpu_c_abi is void; using host_cpu=${host_cpu}" >&2
-  case "$host_cpu" in
-    hppa*) cpu=hppa ;;
-    arm*)  cpu=arm  ;;
-    mips64*) cpu=mips64 ;;
-    * ) cpu=${host_cpu} ;;
-  esac
+  cpu="${host_cpu}"
 fi
 
 test "${verbose}" = true -o "${verbose}" = yes && \
@@ -1331,7 +1326,7 @@ if [ $XCC_GCC = true ] ; then
     fi
     # For platforms that use global register variables...
     case "$cpu" in
-      m68k | i386 | sparc | sparc64 | hppa | arm | alpha* | s390*)
+      m68k | i386 | sparc | sparc64 | hppa | arm | armhf | alpha | s390*)
         if [ $CROSS = false ] ; then
           case "$XCC_GCC_VERSION" in
             3.1*)
